--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ p{
     padding: 0.75rem 1.5rem 0.75rem 1.5rem;
     border-style: none;
 }
+.card button:hover{
+    cursor: pointer;
+    background-color: hsl(0, 0%, 50%);
+    color:hsl(0, 0%, 100%)
+}
 .sedans{
     background-color: hsl(31, 77%, 52%);
     border-radius: 0.5rem 0.5rem 0 0;
@@ -56,7 +61,7 @@ p{
     color: hsl(179, 100%, 13%);
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 900px) {
     .container{
         flex-flow: row nowrap;
         padding-left: 10%;
